Fix specs - login form issues.
Now that the footer is positioned at the bottom using absolute
coordinates, it's div can overlap with the div's before it. Position
it behind them so that the main div is clickable in Selenium tests.

Also, this form used to be on a server that would call into another server
so it was visibly slow at times. Now it authenticates against the local database
so we shouldn't need a "wait" indicator.

--- a/app/assets/stylesheets/layouts/accounts.scss
+++ b/app/assets/stylesheets/layouts/accounts.scss
@@ -133,6 +133,7 @@ section:after {
   position: absolute;
   bottom: 0;
   width: 100%;
+  z-index: -1;
 }
 
 #footer_menu .footer_widget {
